--- a/manifest.plist
+++ b/manifest.plist
@@ -10,19 +10,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://gitee.com/wochenxinxi/myiOS/raw/master/Runner.ipa</string>
+					<string>https://github.com/77251380/myiOS/raw/master/Runner.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://gitee.com/wochenxinxi/myiOS/raw/master/image.57x57.png</string>
+					<string>https://github.com/77251380/myiOS/raw/master/image.57x57.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://gitee.com/wochenxinxi/myiOS/raw/master/image.512x512.png</string>
+					<string>https://github.com/77251380/myiOS/raw/master/image.512x512.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
